@@ -1,6 +1,7 @@
 package ru.practicum.compilation.service;
 
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -17,8 +18,7 @@ import ru.practicum.exception.NotFoundException;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -26,61 +26,77 @@ public class CompilationServiceImpl implements CompilationService {
 
     private final CompilationRepository compilationRepository;
     private final EventRepository eventRepository;
+    private final CompilationMapper compilationMapper;
 
     @Override
     @Transactional(readOnly = true)
-    public List<CompilationDto> getAll(Boolean pinned, int from, int size) {
-        Pageable pageable = PageRequest.of(from, size);
+    public List<CompilationDto> getAll(final Boolean pinned, final int from, final int size) {
+        final Pageable pageable = PageRequest.of(from, size);
 
         return compilationRepository.findAllByPublic(pinned, pageable).stream()
-                .map(CompilationMapper.INSTANCE::toDto)
-                .collect(Collectors.toList());
+                .map(compilationMapper::toDto)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public CompilationDto getById(long compId) {
-        return CompilationMapper.INSTANCE.toDto(findCompilationById(compId));
+    public CompilationDto getById(final long compId) {
+        final Compilation compilation = findCompilationById(compId);
+        return compilationMapper.toDto(compilation);
     }
 
     @Override
     @Transactional
-    public CompilationDto create(CompilationNewDto compilationNewDto) {
-        List<Event> events = compilationNewDto.getEvents() != null && !compilationNewDto.getEvents().isEmpty() ?
-                eventRepository.findAllById(compilationNewDto.getEvents()) :
-                Collections.emptyList();
+    public CompilationDto create(final CompilationNewDto compilationNewDto) {
+        final List<Event> events;
 
-        if (compilationNewDto.getPinned() == null) {
+        if (CollectionUtils.isNotEmpty(compilationNewDto.getEvents())) {
+            events = eventRepository.findAllById(compilationNewDto.getEvents());
+        } else {
+            events = Collections.emptyList();
+        }
+
+        if (Objects.isNull(compilationNewDto.getPinned())) {
             compilationNewDto.setPinned(false);
         }
 
-        return CompilationMapper.INSTANCE.toDto(compilationRepository.save(CompilationMapper.INSTANCE.fromDto(compilationNewDto, events)));
+        final Compilation compilation = compilationMapper.fromDto(compilationNewDto, events);
+
+        final Compilation saved = compilationRepository.save(compilation);
+
+        return compilationMapper.toDto(saved);
     }
 
     @Override
     @Transactional
-    public CompilationDto patch(long compId, CompilationUpdateRequest compilationUpdateRequest) {
-        Compilation compilation = findCompilationById(compId);
+    public CompilationDto patch(final long compId, final CompilationUpdateRequest compilationUpdateRequest) {
+        final Compilation compilation = findCompilationById(compId);
 
-        if (compilationUpdateRequest.getEvents() != null) {
-            compilation.setEvents(eventRepository.findAllById(compilationUpdateRequest.getEvents()));
+        if (Objects.nonNull(compilationUpdateRequest.getEvents())) {
+            final List<Event> eventList = eventRepository.findAllById(compilationUpdateRequest.getEvents());
+            compilation.setEvents(eventList);
         }
 
-        Optional.ofNullable(compilationUpdateRequest.getTitle()).ifPresent(compilation::setTitle);
-        Optional.ofNullable(compilationUpdateRequest.getPinned()).ifPresent(compilation::setPinned);
+        if (Objects.nonNull(compilationUpdateRequest.getPinned())) {
+            compilation.setPinned(compilationUpdateRequest.getPinned());
+        }
 
-        return CompilationMapper.INSTANCE.toDto(compilation);
+        if (Objects.nonNull(compilationUpdateRequest.getTitle())) {
+            compilation.setTitle(compilationUpdateRequest.getTitle());
+        }
+
+        return compilationMapper.toDto(compilation);
     }
 
     @Override
     @Transactional
-    public void delete(long compId) {
-        findCompilationById(compId);
-        compilationRepository.deleteById(compId);
+    public void delete(final long compId) {
+        final Compilation compilation = findCompilationById(compId);
+        compilationRepository.deleteById(compilation.getId());
     }
 
-    private Compilation findCompilationById(long id) {
+    private Compilation findCompilationById(final long id) {
         return compilationRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Compilation with id=" + id + " was not found"));
+                .orElseThrow(() -> new NotFoundException("Compilation with id=%d was not found".formatted(id)));
     }
 }
