@@ -3,6 +3,7 @@ package ru.practicum.event.service;
 import jakarta.annotation.PostConstruct;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.ObjectUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -13,14 +14,7 @@ import ru.practicum.StatsClient;
 import ru.practicum.ViewStatsDto;
 import ru.practicum.category.Category;
 import ru.practicum.category.CategoryRepository;
-import ru.practicum.event.Event;
-import ru.practicum.event.EventMapper;
-import ru.practicum.event.EventRepository;
-import ru.practicum.event.EventRequestStatusUpdateRequest;
-import ru.practicum.event.EventRequestStatusUpdateResult;
-import ru.practicum.event.EventState;
-import ru.practicum.event.EventUpdateAdminRequest;
-import ru.practicum.event.EventUpdateUserRequest;
+import ru.practicum.event.*;
 import ru.practicum.event.controller.EventControllerPublic;
 import ru.practicum.event.dto.EventFullDto;
 import ru.practicum.event.dto.EventNewDto;
@@ -31,22 +25,13 @@ import ru.practicum.location.Location;
 import ru.practicum.location.LocationDto;
 import ru.practicum.location.LocationMapper;
 import ru.practicum.location.LocationRepository;
-import ru.practicum.participationRequest.ParticipationRequest;
-import ru.practicum.participationRequest.ParticipationRequestDto;
-import ru.practicum.participationRequest.ParticipationRequestMapper;
-import ru.practicum.participationRequest.ParticipationRequestRepository;
-import ru.practicum.participationRequest.ParticipationRequestState;
+import ru.practicum.participationRequest.*;
 import ru.practicum.user.User;
 import ru.practicum.user.UserRepository;
 import ru.practicum.util.ConstantsDate;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -54,13 +39,17 @@ public class EventServiceImpl implements EventService {
 
     public static final int TWO_HOURS = 2;
     public static final int ONE_HOURS = 1;
+
     private final EventRepository eventRepository;
     private final UserRepository userRepository;
     private final CategoryRepository categoryRepository;
     private final LocationRepository locationRepository;
     private final ParticipationRequestRepository participationRequestRepository;
+    private final EventMapper eventMapper;
+    private final LocationMapper locationMapper;
+    private final ParticipationRequestMapper participationRequestMapper;
 
-    @Value("${STATS_SERVER_URL:http://localhost:9090}")
+    @Value("${STATS_SERVER_URL}")
     private String statClientUrl;
 
     private StatsClient statsClient;
@@ -71,211 +60,208 @@ public class EventServiceImpl implements EventService {
     }
 
     @Transactional(readOnly = true)
-    public List<EventFullDto> getAllByAdmin(List<Long> users,
-                                            List<EventState> states,
-                                            List<Long> categories,
-                                            LocalDateTime rangeStart,
-                                            LocalDateTime rangeEnd,
-                                            int from,
-                                            int size) {
-        Pageable pageable = PageRequest.of(from, size);
+    public List<EventFullDto> getAllByAdmin(final List<Long> users, final List<EventState> states, final List<Long> categories,
+                                            final LocalDateTime rangeStart, final LocalDateTime rangeEnd, final int from, final int size) {
+        final Pageable pageable = PageRequest.of(from, size);
 
-        if (rangeStart == null) {
-            rangeStart = LocalDateTime.now();
-        }
+        final LocalDateTime actualRangeStart = rangeStart == null
+                ? LocalDateTime.now()
+                : rangeStart;
 
-        if (rangeEnd == null) {
-            rangeEnd = ConstantsDate.getMaxDateTime();
-        }
+        final LocalDateTime actualRangeEnd = rangeEnd == null
+                ? ConstantsDate.getMaxDateTime()
+                : rangeEnd;
 
-        Page<Event> page = eventRepository.findAllByAdmin(users, states, categories, rangeStart, rangeEnd, pageable);
 
-        List<String> eventUrls = page.getContent().stream()
+        final Page<Event> page = eventRepository.findAllByAdmin(users, states, categories, actualRangeStart, actualRangeEnd, pageable);
+
+        final List<String> eventUrls = page.getContent().stream()
                 .map(event -> "/events/" + event.getId())
-                .collect(Collectors.toList());
+                .toList();
 
-        List<ViewStatsDto> viewStatsDtos = statsClient.findStats(rangeStart.format(ConstantsDate.getDefaultDateTimeFormatter()),
-                rangeEnd.format(ConstantsDate.getDefaultDateTimeFormatter()), eventUrls, true);
+        final List<ViewStatsDto> viewStatsDtos = statsClient.findStats(actualRangeStart.format(ConstantsDate.getDefaultDateTimeFormatter()),
+                actualRangeEnd.format(ConstantsDate.getDefaultDateTimeFormatter()), eventUrls, true);
 
         return page.getContent().stream()
-                .map(EventMapper.INSTANCE::toFullDto)
+                .map(eventMapper::toFullDto)
                 .peek(dto -> {
-                    Optional<ViewStatsDto> matchingStats = viewStatsDtos.stream()
+                    final Optional<ViewStatsDto> matchingStats = viewStatsDtos.stream()
                             .filter(statsDto -> statsDto.getUri().equals("/events/" + dto.getId()))
                             .findFirst();
-                    dto.setViews(matchingStats.map(ViewStatsDto::getHits).orElse(0L));
+                    dto.setViews(matchingStats
+                            .map(ViewStatsDto::getHits)
+                            .orElse(0L));
                 })
                 .peek(dto -> dto.setConfirmedRequests(participationRequestRepository.countByEventIdAndStatus(dto.getId(), ParticipationRequestState.CONFIRMED)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
-    public List<EventShortDto> getAllByInitiator(long userId, int from, int size) {
-        Pageable pageable = PageRequest.of(from, size);
-        Page<Event> page = eventRepository.findAllByInitiatorId(userId, pageable);
+    public List<EventShortDto> getAllByInitiator(final long userId, final int from, final int size) {
+        final Pageable pageable = PageRequest.of(from, size);
+        final Page<Event> page = eventRepository.findAllByInitiatorId(userId, pageable);
 
         return page.getContent().stream()
-                .map(EventMapper.INSTANCE::toShortDto)
-                .collect(Collectors.toList());
+                .map(eventMapper::toShortDto)
+                .toList();
     }
 
     @Transactional(readOnly = true)
-    public EventFullDto getByIdByInitiator(long userId, long eventId) {
-        Event event = findEventById(eventId);
+    public EventFullDto getByIdByInitiator(final long userId, final long eventId) {
+        final Event event = findEventById(eventId);
         checkInitiator(userId, eventId, event.getInitiator().getId());
 
-        return EventMapper.INSTANCE.toFullDto(event);
+        return eventMapper.toFullDto(event);
     }
 
     @Transactional(readOnly = true)
-    public List<ParticipationRequestDto> getParticipationRequestsByInitiator(long userId, long eventId) {
+    public List<ParticipationRequestDto> getParticipationRequestsByInitiator(final long userId, final long eventId) {
         findUserById(userId);
-        findEventById(eventId);
+        final Event event = findEventById(eventId);
 
-        return participationRequestRepository.findAllByEventId(eventId).stream()
-                .map(ParticipationRequestMapper.INSTANCE::toDto)
-                .collect(Collectors.toList());
+        return participationRequestRepository.findAllByEventId(event.getId()).stream()
+                .map(participationRequestMapper::toDto)
+                .toList();
     }
 
     @Transactional(readOnly = true)
-    public List<EventShortDto> getAllPublic(String text,
-                                            List<Long> categories,
-                                            Boolean paid,
-                                            LocalDateTime rangeStart,
-                                            LocalDateTime rangeEnd,
-                                            boolean onlyAvailable,
-                                            EventControllerPublic.SortMode sort,
-                                            int from,
-                                            int size,
-                                            HttpServletRequest request) {
-        if (categories != null && categories.size() == 1 && categories.getFirst().equals(0L)) {
-            categories = null;
-        }
+    public List<EventShortDto> getAllPublic(final String text, final List<Long> categories, final Boolean paid,
+                                            final LocalDateTime rangeStart, final LocalDateTime rangeEnd,
+                                            final boolean onlyAvailable, final EventControllerPublic.SortMode sort,
+                                            final int from, final int size, final HttpServletRequest request) {
+        final List<Long> actualCategories = categories != null && categories.size() == 1 && categories.getFirst().equals(0L)
+                ? null
+                : categories;
 
-        if (rangeStart == null) {
-            rangeStart = LocalDateTime.now();
-        }
+        final LocalDateTime actualRangeStart =
+                rangeStart == null ? LocalDateTime.now() : rangeStart;
 
-        if (rangeEnd == null) {
-            rangeEnd = ConstantsDate.getMaxDateTime();
-        }
+        final LocalDateTime actualRangeEnd =
+                rangeEnd == null ? ConstantsDate.getMaxDateTime() : rangeEnd;
 
-        List<Event> eventList = eventRepository.getAllPublic(text, categories, paid, rangeStart, rangeEnd);
+
+        List<Event> eventList = eventRepository.getAllPublic(text, actualCategories, paid, actualRangeStart, actualRangeEnd);
 
         if (onlyAvailable) {
             eventList = eventList.stream()
                     .filter(event -> event.getParticipantLimit().equals(0)
-                                     || event.getParticipantLimit() < participationRequestRepository.countByEventIdAndStatus(event.getId(), ParticipationRequestState.CONFIRMED))
+                            || event.getParticipantLimit() < participationRequestRepository.countByEventIdAndStatus(event.getId(), ParticipationRequestState.CONFIRMED))
                     .toList();
         }
 
-        List<String> eventUrls = eventList.stream()
+        final List<String> eventUrls = eventList.stream()
                 .map(event -> "/events/" + event.getId())
-                .collect(Collectors.toList());
+                .toList();
 
-        List<ViewStatsDto> viewStatsDtos = statsClient.findStats(rangeStart.format(ConstantsDate.getDefaultDateTimeFormatter()),
-                rangeEnd.format(ConstantsDate.getDefaultDateTimeFormatter()), eventUrls, true);
+        final List<ViewStatsDto> viewStatsDtos = statsClient.findStats(actualRangeStart.format(ConstantsDate.getDefaultDateTimeFormatter()),
+                actualRangeEnd.format(ConstantsDate.getDefaultDateTimeFormatter()), eventUrls, true);
 
-        List<EventShortDto> eventShortDtoList = eventList.stream()
-                .map(EventMapper.INSTANCE::toShortDto)
+        final List<EventShortDto> eventShortDtoList = new ArrayList<>(eventList.stream()
+                .map(eventMapper::toShortDto)
                 .peek(dto -> {
-                    Optional<ViewStatsDto> matchingStats = viewStatsDtos.stream()
+                    final Optional<ViewStatsDto> matchingStats = viewStatsDtos.stream()
                             .filter(statsDto -> statsDto.getUri().equals("/events/" + dto.getId()))
                             .findFirst();
                     dto.setViews(matchingStats.map(ViewStatsDto::getHits).orElse(0L));
                 })
                 .peek(dto -> dto.setConfirmedRequests(participationRequestRepository.countByEventIdAndStatus(dto.getId(), ParticipationRequestState.CONFIRMED)))
-                .collect(Collectors.toList());
+                .toList());
 
         switch (sort) {
-            case EVENT_DATE -> eventShortDtoList.sort(Comparator.comparing(EventShortDto::getEventDate));
-            case VIEWS -> eventShortDtoList.sort(Comparator.comparing(EventShortDto::getViews).reversed());
+            case EVENT_DATE -> eventShortDtoList
+                    .sort(Comparator.comparing(EventShortDto::getEventDate));
+            case VIEWS -> eventShortDtoList
+                    .sort(Comparator.comparing(EventShortDto::getViews)
+                            .reversed());
         }
 
         if (from >= eventShortDtoList.size()) {
             return Collections.emptyList();
         }
 
-        int toIndex = Math.min(from + size, eventShortDtoList.size());
+        final int toIndex = Math.min(from + size, eventShortDtoList.size());
         return eventShortDtoList.subList(from, toIndex);
     }
 
     @Transactional(readOnly = true)
-    public EventFullDto getByIdPublic(long eventId, HttpServletRequest request) {
-        Event event = findEventById(eventId);
+    public EventFullDto getByIdPublic(final long eventId, final HttpServletRequest request) {
+        final Event event = findEventById(eventId);
 
         if (event.getState() != EventState.PUBLISHED) {
-            throw new NotFoundException("Event with id=" + eventId + " was not found");
+            throw new NotFoundException("Event with id=%d was not found".formatted(eventId));
         }
 
-        List<String> eventUrls = Collections.singletonList("/events/" + event.getId());
+        final List<String> eventUrls = Collections.singletonList("/events/" + event.getId());
 
-        List<ViewStatsDto> viewStatsDtos = statsClient.findStats(ConstantsDate.getMinDateTime().format(ConstantsDate.getDefaultDateTimeFormatter()),
+        final List<ViewStatsDto> viewStatsDtos = statsClient.findStats(ConstantsDate.getMinDateTime().format(ConstantsDate.getDefaultDateTimeFormatter()),
                 ConstantsDate.getMaxDateTime().plusYears(1).format(ConstantsDate.getDefaultDateTimeFormatter()), eventUrls, true);
 
-        EventFullDto dto = EventMapper.INSTANCE.toFullDto(event);
-        dto.setViews(viewStatsDtos.isEmpty() ? 0L : viewStatsDtos.getFirst().getHits());
+        final EventFullDto dto = eventMapper.toFullDto(event);
+        dto.setViews(viewStatsDtos.isEmpty()
+                ? 0L
+                : viewStatsDtos.getFirst().getHits());
         dto.setConfirmedRequests(participationRequestRepository.countByEventIdAndStatus(dto.getId(), ParticipationRequestState.CONFIRMED));
 
         return dto;
     }
 
     @Transactional
-    public EventFullDto create(long userId, EventNewDto eventNewDto) {
+    public EventFullDto create(final long userId, final EventNewDto eventNewDto) {
         if (LocalDateTime.now().plusHours(TWO_HOURS).isAfter(eventNewDto.getEventTimestamp())) {
             throw new ConflictException("The event date must be 2 hours from the current time or later.");
         }
 
-        User user = findUserById(userId);
-        Category category = findCategoryById(eventNewDto.getCategory());
-        Location location = handleLocationDto(eventNewDto.getLocation());
+        final User user = findUserById(userId);
+        final Category category = findCategoryById(eventNewDto.getCategory());
+        final Location location = handleLocationDto(eventNewDto.getLocation());
 
-        Event event = EventMapper.INSTANCE.fromDto(eventNewDto, category, location);
+        final Event event = eventMapper.fromDto(eventNewDto, category, location);
 
         event.setInitiator(user);
         event.setCreatedOn(LocalDateTime.now());
         event.setState(EventState.PENDING);
 
-        if (eventNewDto.getPaid() == null) {
+        if (Objects.isNull(eventNewDto.getPaid())) {
             event.setPaid(false);
         }
 
-        if (eventNewDto.getParticipantLimit() == null) {
+        if (Objects.isNull(eventNewDto.getParticipantLimit())) {
             event.setParticipantLimit(0);
         }
 
-        if (eventNewDto.getRequestModeration() == null) {
+        if (Objects.isNull(eventNewDto.getRequestModeration())) {
             event.setRequestModeration(true);
         }
+        final Event saved = eventRepository.save(event);
 
-        return EventMapper.INSTANCE.toFullDto(eventRepository.save(event));
+        return eventMapper.toFullDto(saved);
     }
 
     @Transactional
-    public EventFullDto patchByAdmin(long eventId, EventUpdateAdminRequest updateEventAdminRequest) {
+    public EventFullDto patchByAdmin(final long eventId, final EventUpdateAdminRequest updateEventAdminRequest) {
         Event event = findEventById(eventId);
 
         if (updateEventAdminRequest.getEventTimestamp() != null && LocalDateTime.now().plusHours(ONE_HOURS).isAfter(updateEventAdminRequest.getEventTimestamp())) {
             throw new ConflictException("The event date must be 1 hours from the current time or later.");
         }
 
-        if (updateEventAdminRequest.getStateAction() != null) {
-            if (updateEventAdminRequest.getStateAction().equals(EventUpdateAdminRequest.StateAction.PUBLISH_EVENT) &&
-                !event.getState().equals(EventState.PENDING)) {
-                throw new ConflictException("Cannot publish the event because it's not in the right state: " + event.getState());
+        if (ObjectUtils.isNotEmpty(updateEventAdminRequest.getStateAction())) {
+            if (updateEventAdminRequest.getStateAction() == EventUpdateAdminRequest.StateAction.PUBLISH_EVENT
+                    && event.getState() != EventState.PENDING) {
+                throw new ConflictException("Cannot publish the event because it's not in the right state: %s".formatted(event.getState()));
             }
 
-            if (updateEventAdminRequest.getStateAction().equals(EventUpdateAdminRequest.StateAction.REJECT_EVENT) &&
-                event.getState().equals(EventState.PUBLISHED)) {
-                throw new ConflictException("Cannot reject the event because it's not in the right state: " + event.getState());
+            if (updateEventAdminRequest.getStateAction() == EventUpdateAdminRequest.StateAction.REJECT_EVENT
+                    && event.getState() == EventState.PUBLISHED) {
+                throw new ConflictException("Cannot reject the event because it's not in the right state: %s".formatted(event.getState()));
             }
         }
 
-        if (updateEventAdminRequest.getCategory() != null) {
+        if (ObjectUtils.isNotEmpty(updateEventAdminRequest.getCategory())) {
             event.setCategory(findCategoryById(updateEventAdminRequest.getCategory()));
         }
 
-        if (updateEventAdminRequest.getLocation() != null) {
+        if (ObjectUtils.isNotEmpty(updateEventAdminRequest.getLocation())) {
             event.setLocation(handleLocationDto(updateEventAdminRequest.getLocation()));
         }
 
@@ -288,7 +274,7 @@ public class EventServiceImpl implements EventService {
         Optional.ofNullable(updateEventAdminRequest.getPaid()).ifPresent(event::setPaid);
         Optional.ofNullable(updateEventAdminRequest.getRequestModeration()).ifPresent(event::setRequestModeration);
 
-        if (updateEventAdminRequest.getStateAction() != null) {
+        if (ObjectUtils.isNotEmpty(updateEventAdminRequest.getStateAction())) {
             switch (updateEventAdminRequest.getStateAction()) {
                 case PUBLISH_EVENT -> {
                     event.setState(EventState.PUBLISHED);
@@ -300,28 +286,27 @@ public class EventServiceImpl implements EventService {
 
         event = eventRepository.save(event);
 
-        return EventMapper.INSTANCE.toFullDto(event);
+        return eventMapper.toFullDto(event);
     }
 
     @Transactional
-    public EventFullDto patchByInitiator(long userId, long eventId, EventUpdateUserRequest updateEventUserRequest) {
+    public EventFullDto patchByInitiator(final long userId, final long eventId, final EventUpdateUserRequest updateEventUserRequest) {
         Event event = findEventById(eventId);
         checkInitiator(userId, eventId, event.getInitiator().getId());
 
-        if (updateEventUserRequest.getEventTimestamp() != null && LocalDateTime.now().plusHours(2).isAfter(updateEventUserRequest.getEventTimestamp())) {
+        if (ObjectUtils.isNotEmpty(updateEventUserRequest.getEventTimestamp()) && LocalDateTime.now().plusHours(2).isAfter(updateEventUserRequest.getEventTimestamp())) {
             throw new ConflictException("The event date must be 2 hours from the current time or later.");
         }
 
-        if (!(event.getState().equals(EventState.CANCELED) ||
-              event.getState().equals(EventState.PENDING))) {
+        if (!(event.getState().equals(EventState.CANCELED) || event.getState().equals(EventState.PENDING))) {
             throw new ConflictException("Only pending or canceled events can be changed");
         }
 
-        if (updateEventUserRequest.getCategory() != null) {
+        if (ObjectUtils.isNotEmpty(updateEventUserRequest.getCategory())) {
             event.setCategory(findCategoryById(updateEventUserRequest.getCategory()));
         }
 
-        if (updateEventUserRequest.getLocation() != null) {
+        if (ObjectUtils.isNotEmpty(updateEventUserRequest.getLocation())) {
             event.setLocation(handleLocationDto(updateEventUserRequest.getLocation()));
         }
 
@@ -333,7 +318,7 @@ public class EventServiceImpl implements EventService {
         Optional.ofNullable(updateEventUserRequest.getPaid()).ifPresent(event::setPaid);
         Optional.ofNullable(updateEventUserRequest.getRequestModeration()).ifPresent(event::setRequestModeration);
 
-        if (updateEventUserRequest.getStateAction() != null) {
+        if (ObjectUtils.isNotEmpty(updateEventUserRequest.getStateAction())) {
             switch (updateEventUserRequest.getStateAction()) {
                 case SEND_TO_REVIEW -> event.setState(EventState.PENDING);
                 case CANCEL_REVIEW -> event.setState(EventState.CANCELED);
@@ -342,15 +327,14 @@ public class EventServiceImpl implements EventService {
 
         event = eventRepository.save(event);
 
-        return EventMapper.INSTANCE.toFullDto(event);
+        return eventMapper.toFullDto(event);
     }
 
     @Transactional
-    public EventRequestStatusUpdateResult patchParticipationRequestsByInitiator(long userId,
-                                                                                long eventId,
-                                                                                EventRequestStatusUpdateRequest eventRequestStatusUpdateRequest) {
+    public EventRequestStatusUpdateResult patchParticipationRequestsByInitiator(final long userId, final long eventId,
+                                                                                final EventRequestStatusUpdateRequest eventRequestStatusUpdateRequest) {
         findUserById(userId);
-        Event event = findEventById(eventId);
+        final Event event = findEventById(eventId);
 
         long confirmLimit = event.getParticipantLimit() - participationRequestRepository.countByEventIdAndStatus(eventId, ParticipationRequestState.CONFIRMED);
 
@@ -358,41 +342,41 @@ public class EventServiceImpl implements EventService {
             throw new ConflictException("The participant limit has been reached");
         }
 
-        List<ParticipationRequest> requestList = participationRequestRepository.findAllByIdIn(eventRequestStatusUpdateRequest.getRequestIds());
+        final List<ParticipationRequest> requestList = participationRequestRepository.findAllByIdIn(eventRequestStatusUpdateRequest.getRequestIds());
 
-        List<Long> notFoundIds = eventRequestStatusUpdateRequest.getRequestIds().stream()
+        final List<Long> notFoundIds = eventRequestStatusUpdateRequest.getRequestIds().stream()
                 .filter(requestId -> requestList.stream().noneMatch(request -> request.getId().equals(requestId)))
                 .toList();
 
-        if (!notFoundIds.isEmpty()) {
-            throw new NotFoundException("Participation request with id=" + notFoundIds + " was not found");
+        if (ObjectUtils.isNotEmpty(notFoundIds)) {
+            throw new NotFoundException("Participation request with id=%s was not found".formatted(notFoundIds));
         }
 
-        EventRequestStatusUpdateResult result = EventRequestStatusUpdateResult.builder()
+        final EventRequestStatusUpdateResult result = EventRequestStatusUpdateResult.builder()
                 .confirmedRequests(new ArrayList<>())
                 .rejectedRequests(new ArrayList<>())
                 .build();
 
         for (ParticipationRequest req : requestList) {
             if (!req.getEvent().getId().equals(eventId)) {
-                throw new NotFoundException("Participation request with id=" + req.getId() + " was not found");
+                throw new NotFoundException("Participation request with id=%d was not found".formatted(req.getId()));
             }
 
             if (confirmLimit <= 0) {
                 req.setStatus(ParticipationRequestState.REJECTED);
-                result.getRejectedRequests().add(ParticipationRequestMapper.INSTANCE.toDto(req));
+                result.getRejectedRequests().add(participationRequestMapper.toDto(req));
                 continue;
             }
 
             switch (eventRequestStatusUpdateRequest.getStatus()) {
                 case CONFIRMED -> {
                     req.setStatus(ParticipationRequestState.CONFIRMED);
-                    result.getConfirmedRequests().add(ParticipationRequestMapper.INSTANCE.toDto(req));
+                    result.getConfirmedRequests().add(participationRequestMapper.toDto(req));
                     confirmLimit--;
                 }
                 case REJECTED -> {
                     req.setStatus(ParticipationRequestState.REJECTED);
-                    result.getRejectedRequests().add(ParticipationRequestMapper.INSTANCE.toDto(req));
+                    result.getRejectedRequests().add(participationRequestMapper.toDto(req));
                 }
             }
         }
@@ -402,29 +386,29 @@ public class EventServiceImpl implements EventService {
         return result;
     }
 
-    private Event findEventById(long id) {
+    private Event findEventById(final long id) {
         return eventRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Event with id=" + id + " was not found"));
+                .orElseThrow(() -> new NotFoundException("Event with id=%d was not found".formatted(id)));
     }
 
-    private User findUserById(long id) {
+    private User findUserById(final long id) {
         return userRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("User with id=" + id + " was not found"));
+                .orElseThrow(() -> new NotFoundException("User with id=%d was not found".formatted(id)));
     }
 
-    private Category findCategoryById(long id) {
+    private Category findCategoryById(final long id) {
         return categoryRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Category with id=" + id + " was not found"));
+                .orElseThrow(() -> new NotFoundException("Category with id=%d was not found".formatted(id)));
     }
 
-    private void checkInitiator(long userId, long eventId, long initiatorId) {
+    private void checkInitiator(final long userId, final long eventId, final long initiatorId) {
         if (userId != initiatorId) {
-            throw new NotFoundException("Event with id=" + eventId + " was not found");
+            throw new NotFoundException("Event with id=%d was not found".formatted(eventId));
         }
     }
 
-    private Location handleLocationDto(LocationDto locationDto) {
-        Location location = locationRepository.findByLatAndLon(locationDto.getLat(), locationDto.getLon());
-        return location != null ? location : locationRepository.save(LocationMapper.INSTANCE.fromDto(locationDto));
+    private Location handleLocationDto(final LocationDto locationDto) {
+        final Location location = locationRepository.findByLatAndLon(locationDto.getLat(), locationDto.getLon());
+        return location != null ? location : locationRepository.save(locationMapper.fromDto(locationDto));
     }
 }
